# widget

./: .gitignore  README.md  pyproject.toml
tests/: test_get_data.py  test_table_build.py  test_transactions.py
tests/test_data/: test.json
widget/: main.py
widget/widget_table/: get_data.py  table_build.py  transactions.py
