[tool.poetry]
name = "widget"
version = "0.1.0"
description = ""
authors = ["alextk37 <alextk37@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
widget = "widget.main:main"